plugins {
    id 'dev.architectury.loom' version '1.11-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    apply plugin: "architectury-plugin"


    architectury {
        compileOnly()
    }

    tasks.withType(GenerateModuleMetadata) {
        enabled = false
    }

    group = rootProject.maven_group
    version = rootProject.mod_version
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'
    apply plugin: 'java'

    base {
        archivesName = "${rootProject.archives_name}-${project.name}-${rootProject.minecraft_version}"
    }

    repositories {
        mavenCentral()
        maven {
            name = "Jared's maven"
            url = "https://maven.blamejared.com/"
        }
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.officialMojangMappings()

        if (project.name != "common-api") {
            annotationProcessor project(path: ':common-api')
        }
    }

    java {
        withSourcesJar()
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }

    tasks.withType(Jar).configureEach {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }
    tasks.named("sourcesJar", Jar).configure {
        exclude("META-INF/services/**")
    }

    publishing {
        repositories {
            def publishUrl = System.getenv("SIGHS_PUBLISH_URL")
            def publishUser = System.getenv("SIGHS_PUBLISH_USER")
            def publishPassword = System.getenv("SIGHS_PUBLISH_PASSWORD")

            if (publishUrl) {
                maven {
                    name = "remoteRepo"
                    url = uri(publishUrl)
                    credentials {
                        username = publishUser
                        password = publishPassword
                    }
                }
            }
        }
    }
}

subprojects {
    if (project.path == ':fabric' || project.path == ':neoforge') {
        loom {
            mods {
                main {
                    sourceSet project.sourceSets.main
                    sourceSet project(":common-api").sourceSets.main
                }
            }
        }
    }
}